--- a/index.html
+++ b/index.html
@@ -2,13 +2,47 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>P5js Start</title>
-    <link rel="stylesheet" href="./src/style.scss">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+  <title>P5js Start</title>
+  <link rel="stylesheet" href="./src/style.scss">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <script type="text/javascript" src="src/index.js"></script>
 </head>
 
 <body>
+  <main id="layout" class="layout">
+    <aside class="mdc-drawer">   
+      <div class="mdc-drawer__content">     
+        <nav class="mdc-list">       
+          <a class="mdc-list-item mdc-list-item--activated" href="#" aria-selected="true">
+            <i class="material-icons mdc-list-item__graphic" aria-hidden="true">
+              inbox
+            </i>         
+            <span class="mdc-list-item__text">
+              Inbox
+            </span>       
+          </a>       
+          <a class="mdc-list-item" href="#">         
+            <i class="material-icons mdc-list-item__graphic" aria-hidden="true">
+              send
+            </i>
+            <span class="mdc-list-item__text">
+              Outgoing
+            </span>       
+          </a>       
+          <a class="mdc-list-item" href="#">         
+            <i class="material-icons mdc-list-item__graphic" aria-hidden="true">
+              drafts
+            </i>         
+            <span class="mdc-list-item__text">
+              Drafts
+            </span>       
+          </a>     
+        </nav>   
+      </div> 
+    </aside>
+  </main>
 </body>
 
-<script type="text/javascript" src="src/index.js"></script>
+
 </html>
