--- a/index.html
+++ b/index.html
@@ -6,36 +6,14 @@
   <title>P5js Start</title>
   <link rel="stylesheet" href="./src/style.scss">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <script type="text/javascript" src="src/index.js"></script>
 </head>
 
 <body>
-  <main id="layout" class="layout">
-    <aside class="mdc-drawer">   
-      <div class="mdc-drawer__content">     
-        <nav class="mdc-list">       
-          <hr class="mdc-list-divider">
-          <h6 class="mdc-list-group__subheader">Colours</h6>
-          <a class="mdc-list-item mdc-list-item--activated" aria-selected="true">
-            <span class="mdc-list-item__text">
-              One
-            </span>       
-          </a>     
-          <a class="mdc-list-item mdc-list-item" aria-selected="true">
-            <span class="mdc-list-item__text">
-              Two
-            </span>       
-          </a>     
-          <a class="mdc-list-item mdc-list-item" aria-selected="true">
-            <span class="mdc-list-item__text">
-              Three
-            </span>       
-          </a>     
-        </nav>   
-      </div> 
-    </aside>
+  <main class="layout">
+    <app-root/>
   </main>
 </body>
-
 
 </html>
